fixed z-index of progress bar as it was overlapping with the image

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ footer {
     position: absolute;
     top: 0;
     height: 2px;
-    z-index: 9999;
+    z-index: 9990;
     background-color: black;
     left: 0;
 }
